--- a/scripts.yaml
+++ b/scripts.yaml
@@ -71,85 +71,42 @@ turn_on_media_center:
   alias: Turn On Media center
   mode: single
   sequence:
-  - parallel:
-    - if:
-      - condition: state
-        entity_id: binary_sensor.is_tv_on
-        state: 'off'
-      then:
-      - if:
-        - condition: state
-          entity_id: media_player.tv_cast
-          state: unavailable
-        then:
-        - service: wake_on_lan.send_magic_packet
-          data:
-            mac: 68:07:0A:4A:F5:AB
-        - wait_for_trigger:
-          - platform: state
-            entity_id:
-            - remote.jl_s_tv
-            to: 'off'
-          timeout:
-            hours: 0
-            minutes: 1
-            seconds: 0
-            milliseconds: 0
-          continue_on_timeout: true
-      - service: remote.turn_on
-        data: {}
-        target:
-          entity_id: remote.jl_s_tv
-    - if:
+  - service: media_player.turn_on
+    target:
+      entity_id:
+      - media_player.kef
+    data: {}
+  - if:
+    - condition: not
+      conditions:
       - condition: state
         entity_id: media_player.kef
-        state: 'off'
-      then:
-      - service: media_player.turn_on
-        target:
-          entity_id:
-          - media_player.kef
-        data: {}
-      - wait_for_trigger:
-        - platform: state
-          entity_id:
-          - media_player.kef
-          not_to: 'off'
-        timeout:
+        state: Opt
+        attribute: source
+    then:
+    - service: media_player.select_source
+      target:
+        entity_id: media_player.kef
+      data:
+        source: Opt
+  - repeat:
+      while:
+      - condition: state
+        entity_id: media_player.jl_s_tv
+        state: unavailable
+      sequence:
+      - service: wake_on_lan.send_magic_packet
+        data:
+          mac: 68:07:0A:4A:F5:AB
+      - delay:
           hours: 0
           minutes: 0
-          seconds: 10
+          seconds: 3
           milliseconds: 0
-        continue_on_timeout: true
-      - if:
-        - condition: not
-          conditions:
-          - condition: state
-            entity_id: media_player.kef
-            attribute: source
-            state: Opt
-        then:
-        - service: media_player.select_source
-          target:
-            entity_id: media_player.kef
-          data:
-            source: Opt
-    - if:
-      - condition: state
-        entity_id: media_player.kef
-        state: 'on'
-      - condition: not
-        conditions:
-        - condition: state
-          entity_id: media_player.kef
-          attribute: source
-          state: Opt
-      then:
-      - service: media_player.select_source
-        target:
-          entity_id: media_player.kef
-        data:
-          source: Opt
+  - service: remote.turn_on
+    data: {}
+    target:
+      entity_id: remote.jl_s_tv
   icon: mdi:remote-tv
 pulse_2d_led_matrix:
   alias: Pulse - Allumer
