--- a/automations.yaml
+++ b/automations.yaml
@@ -2596,3 +2596,59 @@
         - entity_id: sensor.neuneu_error
           new_state: no_error
   mode: single
+- id: '1693508452789'
+  alias: 'Nettoyage Intelligent - Démarrage automatique de NeuNeu avec serpillière '
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - sensor.neuneu_water_tank
+    to: installed
+    for:
+      hours: 0
+      minutes: 10
+      seconds: 0
+    from: not_installed
+  condition:
+  - condition: state
+    entity_id: input_boolean.automation_clean_house
+    state: 'on'
+  action:
+  - service: vacuum.start
+    data: {}
+    target:
+      entity_id: vacuum.neuneu
+  mode: single
+- id: '1693509234441'
+  alias: "Tesla - \U0001F514 Rappel charge "
+  description: ''
+  trigger:
+  - platform: time
+    at: '21:00:00'
+  condition:
+  - condition: state
+    entity_id: device_tracker.tesla_device_tracker
+    state: home
+  - condition: state
+    entity_id: binary_sensor.tesla_plugged_in
+    state: 'off'
+  - condition: numeric_state
+    entity_id: sensor.tesla_battery_level
+    below: 65
+  - condition: state
+    entity_id: person.jenova70
+    state: home
+  action:
+  - event: NOTIFIER
+    event_data:
+      action: send_to_jl
+      title: "️\U0001F697 Tesla"
+      message: 'Pense à charger la voiture. Niveau de charge actuelle {{states(''sensor.tesla_battery_level'')}}%
+
+        '
+      click_url: /lovelace/tesla
+      tag: tesla_charge_reminder
+      until:
+      - entity_id: binary_sensor.tesla_plugged_in
+        new_state: 'on'
+  mode: single
